--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md
@@ -2,4 +2,4 @@
 title = "37"
 
 +++
-मा भूदिति॥ पुनः कथंभूतौ दंपती? आश्रमपीडा मा भून्माऽस्त्विति हेतोः। 'माङि लुङ्' (पा.3।3।175) इत्याशीरर्थे लुङ्। 'न माङ्योगे' (पा.6।4।74) इत्यडागमनिषेधः। परिमेयपुरःसरौ परिमितपरिचरौ। अनुभावविशेषात्तु तेजोविशेषात् सेनापरिवृताविव स्थोरौ ॥ 37 ॥
+मा भूदिति॥ पुनः कथंभूतौ दंपती? **आश्रम-पीडा मा भून्** माऽस्त्विति हेतोः। 'माङि लुङ्' (पा.3।3।175) इत्य् आशीर्-अर्थे लुङ्। 'न माङ्योगे' (पा.6।4।74) इत्य् अड्-आगम-निषेधः। **परि-मेय-पुरःसरौ** परिमित-परिचरौ। **अनुभाव-विशेषात् तु** तेजो-विशेषात् सेना-परिवृताव् इव स्थितौ ॥ 37 ॥
