--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -289,23 +289,29 @@ unicode_script = "devanagari"
 
 मा भूद् आश्रम-पीडेति  
 परिमेय-पुरःसरौ ।  
-अनुभाव-विशेषात् तु  
+अनुभाव+++(→तेजो)+++-विशेषात् तु  
 सेना-परिवृताव् इव ॥ ३७ ॥    
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
 
 
-सेव्यमानौ सुखस्पर्शैः शालनिर्यासगन्धिभिः ।  
-पुष्परेणूत्किरैर्वातैराधूतवनराजिभिः ॥ ३८ ॥    
+सेव्यमानौ सुख-स्पर्शैः  
+शाल-निर्यास+++(=निस्यन्द)+++-गन्धिभिः ।  
+पुष्प-रेणूत्किरैर् वातैर्  
+आधूत-वन-राजिभिः ॥ ३८ ॥    
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
 
 
-मनोऽभिरामाः शृण्वन्तौ रथनेमिस्वनोन्मुखैः ।  
-षड्जसव्ँवादिनीः केका द्विधा भिन्नाः शिखण्डिभिः ॥ ३९ ॥    
+मनोऽभिरामाः शृण्वन्तौ  
+रथनेमि-स्वनोन्मुखैः ।  
+षड्ज-सव्ँवादिनीः केका  
+द्विधा भिन्नाः शिखण्डिभिः ॥ ३९ ॥    
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
 
 
-परस्पराक्षिसादृश्यम् अदूरोज्झितवर्त्मसु ।  
-मृगद्वन्द्वेषु पश्यन्तौ स्यन्दनाबद्धदृष्टिषु ॥ ४० ॥    
+परस्पराक्षि-सादृश्यम्  
+अदूरोज्झित-वर्त्मसु ।  
+मृग-द्वन्द्वेषु पश्यन्तौ  
+स्यन्दनाबद्ध-दृष्टिषु ॥ ४० ॥  +++(5)+++  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
 
 
