--- a/shAstram/nATyam/nATyashAstram/abhinavabhAratI/v2.md
+++ b/shAstram/nATyam/nATyashAstram/abhinavabhAratI/v2.md
@@ -7223,7 +7223,7 @@ I अन्यक्रमेणैवेति
 इति श्रीभारतीये नाट्यशास्त्रे गतिप्रचारो नाम
 द्वादशोऽध्यायः4 ।*
 
-<details><summary>Notes</summary>
+<details><summary>Abh</summary>
 
 
 **अर्थवशेनेति** लौकिकेनेत्यर्थः । अथैतदुपसंहृताध्यायानन्तरावकाशं संगतिप्रदर्शनपूर्वकमाह
@@ -7240,11 +7240,12 @@ I अन्यक्रमेणैवेति
 द्वादशः समाप्तः ।
 </details>
 
-<!-- APPARATUS page 175 !-->
+<details><summary>Notes</summary>
+
 1. **द**-शास्त्रतः 2 **द**- ज्ञेयं 3 **ज**-कक्ष्यादिविभागयुक्तम् 4 **जा**दि **बा**न्तेष्वादर्शेषु (also N)
 त्रयोदशोऽध्यायः । **द**मातृकायामस्निन्नध्याये श्लोकसंख्या २०९ इति, आदितः २१४९ इति च लिखितम् ।
 *** N : गतिप्रचारो नामाध्यायस्त्रयोदशः ।**
-
+</details>
 <pb n="176"/>
 
 <q>*भ म मातृकाभिन्नपाठक्रमो द्वादशोऽध्यायः
