--- a/shAstram/nATyam/nATyashAstram/abhinavabhAratI/v1.md
+++ b/shAstram/nATyam/nATyashAstram/abhinavabhAratI/v1.md
@@ -8610,7 +8610,8 @@ N. क्षिप्रमाविद्धकरणं । 5. N. दण्ड
 एतेनोत्साहगातव्यानामर्थेऽनुकार्यत्वं दर्शितम् ।
 </details>
 
-<!-- COMMENTARY page 169 !-->
+<details><summary>Abh</summary>
+
 
 अथ गीयमानरूपकाभिनयदर्शनात्1 नाट्यतो वैलक्षण्यं न तत्तावत् ।
 वैलक्षण्यमात्रप्रयोजकावान्तरभेदस्य सर्वत्र सम्भवादिति ह्युक्तम् । न चेदं वैलक्षण्यम् ।
@@ -8635,6 +8636,7 @@ N. क्षिप्रमाविद्धकरणं । 5. N. दण्ड
 स्त्रीपुंभावसमाश्रयम् ।" इति । अत एव च **चूडामणिडोम्बिकायां** प्रतिज्ञातं "बिंदुगुणं
 वमि सहि इहोदिवचो अमिदुणधं । महसारकः गेते उं (?) ।" अत एव सहृदयाः
 स्मरन्ति "वध(स) मचूडामणिआ" (इति । तस्मान्नृत्तं नाट्यादभिन्नं5 तल्लक्षणोपेतत्वात् ।
+</details>
 
 <details><summary>Notes</summary>
 
@@ -8700,7 +8702,8 @@ N. क्षिप्रमाविद्धकरणं । 5. N. दण्ड
 वस्तून्यभिनयस्य" इति (ना.शा. ८-१५) ।  
 </details>
 
-<!-- COMMENTARY page 171 !-->
+<details><summary>Abh</summary>
+
 
 एतद्दूषयति--**यदा प्राप्त्यर्थमि**ति । इह "योऽयं स्वभावो लोकस्य" इति
 (ना.शा.१-११९) लक्षणेन नाट्यं लक्षितम् । तत्राभिनयानामुपयोग उक्तार्थाभिमुख्यप्राप्तिः ।
@@ -8734,6 +8737,7 @@ N. क्षिप्रमाविद्धकरणं । 5. N. दण्ड
 नयनार्थम् । यद्ययं नृत्ताभिमतोऽभिनयो विहितस्तत्कस्मादभिनयत्वे तुल्ये नृत्तमेतन्न
 नाट्यम् । तथाहि--गीतकार्थाभिनये कर्तव्ये कमन्यमाङ्गिकहस्तका(चा)र्याद्य--
 भिनयव्यतिरिक्तं स्वभावमपेक्षते । न कञ्चिदन्यमित्यर्थः ।
+</details>
 
 <details><summary>Notes</summary>
 
