--- a/shAstram/nATyam/nATyashAstram/abhinavabhAratI/v4.md
+++ b/shAstram/nATyam/nATyashAstram/abhinavabhAratI/v4.md
@@ -18471,7 +18471,8 @@ by G. and V.) I have consulted profitably.
 गान(मा्)-गान्धर्वे गाने शुद्धभिन्नगौडराग(वेसर)साधारणभाषाविभाषान्तरभाषारूपगीत्यष्टकोचितललित-<pb n="401"/>
 </details>
 
-<!-- COMMENTARY page 401 !-->
+<details><summary>Abh</summary>
+
 गीतनादि(द)स्वरस्वरूपलाभे प्रत्येकदर्श(श)पूर्णषट्पञ्चचतुःस्वरभेदयोगाद् द्वात्रिंशता सह त्रिंशतेः
 स्वराणामुक्तसङ्गतिवैचित्र्यात् स्वराणां येऽङ्कनाद्यष्टचत्वारिंशत्तानि तावत् प्राधान्येऽन्यस्व(र)संरवभट्टगान्धर्वे
 च मूर्छनाश्चतुर्दश तानाश्चतुरशीतिरिति । यदैवं स्वरस्वरूपसम्पत्तिं गाने तु द्विस्वरात् प्रभृति पूर्णस्वरपर्यन्तं
@@ -18497,6 +18498,7 @@ by G. and V.) I have consulted profitably.
 तालमकारारम्भकण(क)मनुरुध्यत इति सोऽपि विलक्षण एव । पदमपि विनियुक्तादिभेदत्रयस्य
 कुलकादिभेदत्रयगुणनया नवधा भवेद् देवस्तुतौ प्रधानम् । गान्धर्वे तत्रैवार्थानुसारमनवेक्ष्यैव
 जात्यन्तरविरचितवर्णाङ्गाधारभासं तालप्रमितस्वरप्रधानतया गुणत्वेन प्रतिपाद्यते । गाने पुनश्छेद्यकामे मूल
+</details>
 
 <pb n="402"/>
 
