--- a/TIkA/padyam/kAlidAsaH/kumArasambhavam/04.md
+++ b/TIkA/padyam/kAlidAsaH/kumArasambhavam/04.md
@@ -3,7 +3,6 @@ title: सर्गः ०४ - रतिविलापः
 unicode_script: devanagari
 
 ---
-
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga04-1-10.mp3"></div>
 
 अथ मोहपरायणा सती विवशा कामवधूर्विबोधिता ।  
@@ -100,7 +99,7 @@ unicode_script: devanagari
 
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga04-30-46.mp3"></div>
 
-विधिना कृतमर्धवैशसं ननु माम्कामवधे विमुञ्चता ।  
+विधिना कृतमर्धवैशसं ननु माङ्कामवधे विमुञ्चता ।  
 अनघापि हि संश्रयद्रुमे गजभग्ने पतनाय वल्लरी ॥ ४।३१॥
 
 तदिदं क्रियतामनन्तरं भवता बन्धुजनप्रयोजनम् ।  
