--- a/TIkA/padyam/kAlidAsaH/kumArasambhavam/05.md
+++ b/TIkA/padyam/kAlidAsaH/kumArasambhavam/05.md
@@ -43,7 +43,7 @@ unicode_script: devanagari
 
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga05-13-25.mp3"></div>
 
-पुनर्ग्रहीतुं नियमस्थया तया द्वये ऽपि निक्षेप इवार्पितम्द्वयम् ।  
+पुनर्ग्रहीतुं नियमस्थया तया द्वये ऽपि निक्षेप इवार्पितन्द्वयम् ।  
 लतासु तन्वीषु विलासचेष्टितं विलोलदृष्टं हरिणाङ्गनासु च ॥ ५।१३॥
 
 अतन्द्रिता सा स्वयमेव वृक्षकान्घटस्तनप्रस्रवणैर्व्यवर्धयत् ।  
