--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/001.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/001.md
@@ -376,7 +376,7 @@ title: ००१
 तत् एतत् उक्तम् पक्षे अस्मिन् शुक्ले चन्द्रवतीः इमाः।  
 रात्रीः दश प्रतीक्षध्वम् संगमानुचिताः इति॥१.८.१०५॥  
 इति आश्वास्य सः तम् राजसुतम् मन्त्रिसुतः ततः।  
-विक्रीय गुप्तम् हस्तस्थम् काञ्चनम् किम्चित् आपणे॥१.८.१०६॥  
+विक्रीय गुप्तम् हस्तस्थम् काञ्चनम् किञ्चित् आपणे॥१.८.१०६॥  
 वृद्धया साधयामास महा- अर्हम् भोजनम् तया।  
 ततः तौ बुभुजाते द्वौ तत् तया सह वृद्धया॥१.८.१०७॥  
 एवम् नीत्वा दशाहानि जिज्ञासा- अर्थम् पुनः सः ताम्।  
@@ -435,7 +435,7 @@ title: ००१
 हन्त आर्यपुत्र पृच्छामि ताः संज्ञाः मत्कृताः त्वया॥१.८.१३४॥  
 ज्ञाता किम् किम् उवा तेन सख्या मन्त्रिसुतेन ते।  
 एवम् उक्तवतीम् एताम् राजपुत्रः जगाद सः॥१.८.१३५॥  
-न ज्ञातम् तत् मया किम्चित् ज्ञात्वा सर्वम् च तेन मे।  
+न ज्ञातम् तत् मया किञ्चित् ज्ञात्वा सर्वम् च तेन मे।  
 आख्यातम् मन्त्रिपुत्रेण दिव्यप्रज्ञानशालिना॥१.८.१३६॥  
 एतत् श्रुत्वा विचिन्त्य एव भामिनी सा जगाद तम्।  
 तर्हि अयुक्तम् कृतम् यत् मे चिरात् सः कथितः त्वया॥१.८.१३७॥  
