--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/003.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/003.md
@@ -200,7 +200,7 @@ title: ००३
 पपात भूमौ कृपणम् विलपन्ती रुरोद च॥३.१०.६५॥  
   
 अवतार्य अथ वृक्षात् तम् गतासुम् निजकामुकम्।  
-उपवेश्य आङ्गरागेण पुष्पैः च अलम्चकार सा॥३.१०.६६॥  
+उपवेश्य आङ्गरागेण पुष्पैः च अलञ्चकार सा॥३.१०.६६॥  
   
 समालिङ्ग्य च निःसंज्ञम् रागशोकान्धमानसा।  
 उन्नमय्य मुखम् यावत् तस्य आर्ता परिचुम्बति॥३.१०.६७॥  
@@ -235,7 +235,7 @@ title: ००३
 एत्य अथ तत्पिता दृष्ट्वा ताम् आर्द्रछिन्ननासिकाम्।  
 क्रुद्धः तम् बन्धयामास भार्याद्रोही इति तत् पतिम्॥३.१०.७७॥  
   
-सः तु न एव अब्रवीत् किम्चित् बध्यमानः अपि मूकवत्।  
+सः तु न एव अब्रवीत् किञ्चित् बध्यमानः अपि मूकवत्।  
 विपर्यस्तेषु सर्वेषु शृण्वत्सु श्वशुर- आदिषु॥३.१०.७८॥  
   
 ततः ज्ञात्वा एव तत् चौरे तस्मिन् अपसृते लघु।  
