--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/007.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/007.md
@@ -80,7 +80,7 @@ title: ००७
 धिक् च तम् परिवारम् यः न ज्ञापयति तान् तथा॥७.१४.२५॥  
   
 इति संचिन्त्य जग्राह सः राजा आमलकद्वयम्।  
-हस्तात् कार्पटिकस्य अथ कथम्चित् अनुबध्नतः॥७.१४.२६॥  
+हस्तात् कार्पटिकस्य अथ कथञ्चित् अनुबध्नतः॥७.१४.२६॥  
   
 भुक्त्वा च तत् निपीय अम्बु विशश्राम अत्र सः क्षणम्।  
 जग्ध- आमलकसंपीतजलकार्पटिकान्वितः॥७.१४.२७॥  
@@ -286,7 +286,7 @@ title: ००७
 ततः सा कन्यका अवादीत् देव मा स्म एवम् आदिश।  
 न विडम्बनशीला अहम् का वा पूज्ये विडम्बना॥७.१४.९४॥  
   
-अहम् हि सत्त्वौत्कर्षेण युष्माकम् किम्करीकृता।  
+अहम् हि सत्त्वौत्कर्षेण युष्माकम् किङ्करीकृता।  
 तन्मम प्रार्थनाभङ्गम् न एव एवम् कर्तुम् अर्हथ॥७.१४.९५॥  
   
 एतत् श्रुत्वा तथा इति उक्त्वा सत्त्वशीलसखः सः तत्।  
