--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/010.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/010.md
@@ -47,7 +47,7 @@ title: ०१०
 तस्थौ निपत्य शयने चन्द्रपाद- आहतः लुठन्॥१०.१७.१४॥  
   
 यत्नेन पृच्छ्यमानः अपि सखिभिः बन्धुभिः तथा।  
-न किम्चित् कथयामास स्मरग्रहविमोहितः॥१०.१७.१५॥  
+न किञ्चित् कथयामास स्मरग्रहविमोहितः॥१०.१७.१५॥  
   
 निशि कृच्छ्रात् च संप्राप्तनिद्रः स्वप्ने तथा एव ताम्।  
 पश्यन् अनुनयन् कान्ताम् किम् किम् चक्रे न सोत्सुकः॥१०.१७.१६॥  
