--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/012.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/012.md
@@ -47,7 +47,7 @@ title: ०१२
 भार्या मेधाविनी धीरा सा अन्वर्था तम् अभाषत॥१२.१९.१४॥  
   
 तीर्थयात्रा- अपदेशेन युक्त्या आपृच्छ्य महीपतिम्।  
-कम्चित् कालम् विदेशम् ते गन्तुम् युक्तम् महामते॥१२.१९.१५॥  
+कञ्चित् कालम् विदेशम् ते गन्तुम् युक्तम् महामते॥१२.१९.१५॥  
   
 एवम् ते निःस्पृहस्य एष जनवादः निवर्त्स्यति।  
 त्वयि अस्थिते ततः राज्यम् उद्वक्ष्यति नृपः स्वयम्॥१२.१९.१६॥  
@@ -121,7 +121,7 @@ title: ०१२
 क्व मन्त्रिमुख्यता च अस्य क्व वा अध्वौल्लङ्घिताम्बुधिः।  
 अयशःभीरवः किम् न कुर्वते बत साधवः॥१२.१९.३९॥  
   
-तत्र द्वीपे समम् तेन कम्चित् कालम् उवास सः।  
+तत्र द्वीपे समम् तेन कञ्चित् कालम् उवास सः।  
 वणिजा निधिदत्तेन कुर्वता क्रयविक्रयौ॥१२.१९.४०॥  
   
 आगच्छन् च ततः अकस्मात् तत्युक्तः वहनस्थितः।  
@@ -287,7 +287,7 @@ title: ०१२
 आरुह्य द्वारम् उद्घाट्य प्रविवेश सः भूपतिः॥१२.१९.९४॥  
   
 प्रविश्य च अन्तः सत्रत्नपर्यङ्कस्थितम् एककम्।  
-वस्त्र- आच्छादितसर्वाङ्गम् शयानम् कम्चित् ऐक्षत॥१२.१९.९५॥  
+वस्त्र- आच्छादितसर्वाङ्गम् शयानम् कञ्चित् ऐक्षत॥१२.१९.९५॥  
   
 किम् स्यात् सा एव इति सौत्कण्ठम् उद्घाटयति तत्मुखम्।  
 यावत् तावत् अपश्यत् ताम् स्व- ईप्सिताम् एव सः अङ्गनाम्॥१२.१९.९६॥  
@@ -404,7 +404,7 @@ title: ०१२
 चिरम् गौरीम् समर्चन्त्या दैवात् अवसितम् दिनम्॥१२.१९.१३३॥  
   
 तत् अहर्मत्प्रतीक्षः सन् क्षुधितः अपि सः मत्पिता।  
-न अभुङ्क्त न अपिबत् किम्चित् आसीत् क्रुद्धः तु माम् प्रति॥१२.१९.१३४॥  
+न अभुङ्क्त न अपिबत् किञ्चित् आसीत् क्रुद्धः तु माम् प्रति॥१२.१९.१३४॥  
   
 ततः रात्रौ उपेताम् माम् सापराधाम् अधःमुखीम्।  
 भवितव्यबलग्रस्तमत्स्नेहः शपति स्म सः॥१२.१९.१३५॥  
