--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/013.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/013.md
@@ -150,7 +150,7 @@ title: ०१३
 गत्वा ताम् सत्त्रिणः तस्य विप्रस्य उवाच गेहिनीम्॥१३.२०.४८॥  
   
 त्वत्दत्तात् विषम् अन्नात् मे जातम् तत् विषमन्त्रिणम्।  
-कम्चित् मम आनय क्षिप्रम् ब्रह्महत्या अन्यथा अस्ति ते॥१३.२०.४९॥  
+कञ्चित् मम आनय क्षिप्रम् ब्रह्महत्या अन्यथा अस्ति ते॥१३.२०.४९॥  
   
 इति उक्त्वा एव सः ताम् साध्वीम् किम् एतत् इति विह्वलाम्।  
 हरिस्वामी परावृत्तनेत्रः प्राणैः व्ययुज्यत॥१३.२०.५०॥  
