--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/014.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/014.md
@@ -28,7 +28,7 @@ title: ०१४
 यौवनस्थाम् च ताम् तस्मात् रत्नदत्तात् न केवलम्।  
 महान्तः वणिजः यावत् राजानः अपि ययाचिरे॥१४.२१.८॥  
   
-सा तु पुम्द्वेषिणी न ऐच्छत् भर्तारम् अपि वासवम्।  
+सा तु पुन्द्वेषिणी न ऐच्छत् भर्तारम् अपि वासवम्।  
 प्राणत्यागौद्यता सेहे न विवाहकथाम् अपि॥१४.२१.९॥  
   
 तेन तस्याः पिता तूष्णीम् तस्थौ वात्सल्यदुःस्थितः।  
