--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/015.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/015.md
@@ -43,7 +43,7 @@ title: ०१५
 इति अन्यःअन्यनवप्रेमसरसौ यावत् अत्र तौ।  
 तिष्ठतः तावत् उदभूत् हा हा हा इति महारवः॥१५.२२.१३॥  
   
-किम् एतत् इति च उत्क्षिप्तकम्धरम् पश्यतोः तयोः।  
+किम् एतत् इति च उत्क्षिप्तकन्धरम् पश्यतोः तयोः।  
 आयात् अत्र उपलब्धान्यगजगन्धौत्थया रुषा॥१५.२२.१४॥  
   
 भग्न- आलानः विनिर्गत्य मत्तः मार्गद्रुमान् रुजन्।  
@@ -52,7 +52,7 @@ title: ०१५
 ततः परिजने त्रस्तविद्रुते ताम् ससंभ्रमम्।  
 राजपुत्रीम् प्रधाव्य एव दोर्भ्याम् उत्क्षिप्य च एककाम्॥१५.२२.१६॥  
   
-अङ्गैः किम्चित् कृत- आश्लेषाम् भयप्रेमत्रपा- आकुलाम्।  
+अङ्गैः किञ्चित् कृत- आश्लेषाम् भयप्रेमत्रपा- आकुलाम्।  
 निनाय सः मनःस्वामी सुदूरम् गजगोचरात्॥१५.२२.१७॥  
   
 अथ आगतैः परिजनैः स्तुवद्भिः तम् द्विजौत्तमम्।  
@@ -119,7 +119,7 @@ title: ०१५
 किम् मे त्वयि अपि अविश्वासः शृणु तत् सखि वच्मि ते॥१५.२२.३८॥  
   
 एकदा अहम् मधूद्यानयात्राम् द्रष्टुम् गता अभवम्।  
-तत्र अपश्यम् च सुभगम् कम्चित् ब्राह्मणपुत्रकम्॥१५.२२.३९॥  
+तत्र अपश्यम् च सुभगम् कञ्चित् ब्राह्मणपुत्रकम्॥१५.२२.३९॥  
   
 हिममुक्तैन्दुसश्रीकम् दर्शनौद्दीपितस्मरम्।  
 मधुमासम् इव आलोकक्रीडालंकृतकाननम्॥१५.२२.४०॥  
@@ -253,7 +253,7 @@ title: ०१५
 तथा स्थितम् कदाचित् तम् सा मृगाङ्कवती निशि।  
 शय्यागृहे रहः अवादीत् बहिःसुप्ते परिच्छदे॥१५.२२.८३॥  
   
-कथाम् काम्चित् त्वम् आख्याहि निद्रा न अस्ति हि मे सखि।  
+कथाम् काञ्चित् त्वम् आख्याहि निद्रा न अस्ति हि मे सखि।  
 तत् श्रुत्वा अकथयत् सः अस्यै स्त्रीरूपः ताम् कथाम् युवा॥१५.२२.८४॥  
   
 यत्र इला- आख्यस्य राजऋषेः सूर्यवंशभुवः पुरा।  
