--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/016.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/016.md
@@ -535,7 +535,7 @@ title: ०१६
 तयोः एत्य जगाद एका चेटी ताम् सिद्धकन्यकाम्॥१६.२३.५७॥  
 जननी राजपुत्रि त्वाम् स्मरति आगच्छ माचिरम्।  
 तत् श्रुत्वा आकृष्य कामैषुकीलिताम् इव कृच्छ्रतः॥१६.२३.५८॥  
-सौत्काम् प्रियमुखात् दृष्टिम् कथम्चित् सा ययौ गृहम्।  
+सौत्काम् प्रियमुखात् दृष्टिम् कथञ्चित् सा ययौ गृहम्।  
 जीमूतवाहनः अपि आगात् तत् नत- आत्मा स्वमाश्रमम्॥१६.२३.५९॥  
 सा अथ स्वाम् जननीम् दृष्टा प्राण- ईशविरह- आतुरा।  
 गत्वा मलयवती आशु पपात शयनीयके॥१६.२३.६०॥  
@@ -621,7 +621,7 @@ title: ०१६
 वासुकिः प्रार्थनापूर्वम् तार्क्ष्यस्य समयम् व्यधात्॥१६.२३.१००॥  
 एकम् एकम् अहम् नागम् आहारार्थम् खगैन्द्र ते।  
 प्रति- अहम् प्रेषयामि अत्र पुलिने दक्षिणौदधेः॥१६.२३.१०१॥  
-त्वया तु न प्रवेष्टव्यम् पाताले अस्मिन् कथम्चन।  
+त्वया तु न प्रवेष्टव्यम् पाताले अस्मिन् कथञ्चन।  
 कः हि स्वार्थः विनष्टेषु नागेषु एकपदे तव॥१६.२३.१०२॥  
 इति उक्ते नागराजेन समयम् प्रत्यपद्यत।  
 स्वार्थदर्शी तथा इति एव गरुडः गुरुविक्रमः॥१६.२३.१०३॥  
