--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/019.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/019.md
@@ -202,7 +202,7 @@ title: ०१९
 प्रसङ्गात् तीर्थयात्राम् च करोमि आपूर्वसागरम्।  
 इति उक्तवन्तम् राजानम् मन्त्रिणः तम् व्यजिज्ञपन्॥१९.२६.६६॥  
   
-न देव युज्यते कर्तुम् एतत् राज्ञः कथम्चन।  
+न देव युज्यते कर्तुम् एतत् राज्ञः कथञ्चन।  
 न हि राज्यम् बहुछिद्रम् क्षणम् तिष्ठति अरक्षितम्॥१९.२६.६७॥  
   
 तत् एषा परहस्तेन कार्या ते पितृउपक्रिया।  
