--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/021.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/021.md
@@ -71,13 +71,13 @@ title: ०२१
 रजःअभिभूतौ जह्राते मन्मथ- आवेगवात्यया॥२१.२८.२२॥  
   
 दृष्ट्वा च मदन- आविष्टः सख्या सः कमलाकरः।  
-सहस्थितेन नीतः अभूत् कथम्चित् भवनम् निजम्॥२१.२८.२३॥  
+सहस्थितेन नीतः अभूत् कथञ्चित् भवनम् निजम्॥२१.२८.२३॥  
   
 सा अपि तम् नामतः अन्विष्य विवशा अनङ्गमञ्जरी।  
 तया स्वया समम् सख्या प्राविशत् वासकम् शनैः॥२१.२८.२४॥  
   
 तत्र संचिन्तयन्ती च कान्तम् कामज्वर- आतुरा।  
-न अपश्यत् न अशृणोत् किम्चित् लुठन्ती शयनीयके॥२१.२८.२५॥  
+न अपश्यत् न अशृणोत् किञ्चित् लुठन्ती शयनीयके॥२१.२८.२५॥  
   
 गतेषु अहःसु द्वित्रेषु सत्रपा सभया च सा।  
 असहा विरहौन्मादम् विसोढुम् कृशपाण्डुरा॥२१.२८.२६॥  
