--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/022.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/022.md
@@ -34,14 +34,14 @@ title: ०२२
 तत्र मातामहाभावात् मातुलैः दत्तसंश्रयाः।  
 भुञ्जानाः तत्गृहे तस्थुः स्वाध्यायाभ्यासतत्पराः॥२२.२९.१०॥  
   
-कालक्रमात् च तेषाम् ते मातुलानाम् अकिम्चनाः।  
+कालक्रमात् च तेषाम् ते मातुलानाम् अकिञ्चनाः।  
 अवज्ञापात्रताम् जग्मुः भोजन- आच्छादन- आदिषु॥२२.२९.११॥  
   
 ततः स्वजनसंस्फूर्जदवमानहतात्मनाम्।  
 तेषाम् रहः सचिन्तानाम् ज्येष्ठः भ्राता अब्रवीत् इदम्॥२२.२९.१२॥  
   
 भो भ्रातरः किम् क्रियते सर्वम् आचेष्टते विधिः।  
-न शक्यम् पुरुषस्य इह क्वचित् किम्चित् कदाचन॥२२.२९.१३॥  
+न शक्यम् पुरुषस्य इह क्वचित् किञ्चित् कदाचन॥२२.२९.१३॥  
   
 अहम् हि उद्वेगतः भ्राम्यन् प्राप्तः अद्य पितृकानने।  
 विपन्नस्थितम् अद्राक्षम् त्रस्ताङ्गम् पुरुषम् भुवि॥२२.२९.१४॥  
@@ -86,7 +86,7 @@ title: ०२२
 उवाच कः गुणः तादृगर्जनीयः भवेत् इति॥२२.२९.२७॥  
   
 ततः विचिन्त्य सर्वे ते वदन्ति स्म परस्परम्।  
-विचिन्त्य पृथ्वीम् विज्ञानम् किम्चित् शिक्षामहे वयम्॥२२.२९.२८॥  
+विचिन्त्य पृथ्वीम् विज्ञानम् किञ्चित् शिक्षामहे वयम्॥२२.२९.२८॥  
   
 निश्चित्य एतत् च संकेतस्थानम् उक्त्वा समागमे।  
 एकएकशः ते चत्वारः चतस्रः प्रययुः दिशः॥२२.२९.२९॥  
