--- a/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/023.md
+++ b/TIkA/padyam/kathAsaritsAgaraH/12/vetAla-panchavimshatikA/023.md
@@ -58,7 +58,7 @@ title: ०२३
 तत् एतम् प्रेतम् आश्लिष्य विद्वन् वद करोषि किम्।  
 इति- आदि अबोधयन् वृद्धाः मिलिताः तम् द्विजम् ततः॥२३.३०.१८॥  
   
-ततः तेन कथम्चित् तम् मुक्तम् आरोप्य तत्सुतम्।  
+ततः तेन कथञ्चित् तम् मुक्तम् आरोप्य तत्सुतम्।  
 शिबिकायाम् गतप्राणम् कृतप्रेतप्रसाधनम्॥२३.३०.१९॥  
   
 बान्धवाः वैशसौदश्रुमिलत्बन्धुजनान्विताः।  
@@ -74,7 +74,7 @@ title: ०२३
 विद्युत्पिङ्गजटाजूटः महेश्वर इव अपरः॥२३.३०.२३॥  
   
 सः तापसः अत्र तत् कालम् दत्तौपालम्भखेदितम्।  
-मूर्खम् शठम् ध्यानयोग- आदि- अवलिप्तम् अहम्कृतम्॥२३.३०.२४॥  
+मूर्खम् शठम् ध्यानयोग- आदि- अवलिप्तम् अहङ्कृतम्॥२३.३०.२४॥  
   
 भिक्षाफलव्रतधरम् शिष्यम् अन्तिकवासिनम्।  
 जगाद दूरात् श्रुत्वा तम् जनकोलाहलम् बहिः॥२३.३०.२५॥  
