--- a/TIkA/padyam/purANam/nArAyaNIyam/075.md
+++ b/TIkA/padyam/purANam/nArAyaNIyam/075.md
@@ -79,5 +79,5 @@ title: ०७५
 
 तद्भ्रातॄनष्ट पिष्ट्वा द्रुतमथ पितरौ सन्नमन्नुग्रसेनं  
 कृत्वा राजानमुच्चैर्यदुकुलमखिलं मोदयन्कामदानैः ।  
-भक्तानामुत्तमम्ञ्चोद्धवममरगुरोराप्तनीतिं सखायं  
+भक्तानामुत्तमञ्ञ्चोद्धवममरगुरोराप्तनीतिं सखायं  
 लब्ध्वा तुष्टो नगर्यां पवनपुरपते रुन्धि मे सर्वरोगान् ॥ ७५१०॥
