--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/37.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/37.md
@@ -2,4 +2,4 @@
 title = "37"
 
 +++
-आपादेति॥ आपादपद्ममङ्घ्रिपम्दपर्यन्तं प्रणताः। अत एव,उत्खाताः पूर्वमुद्धृता अपि प्रतिरोपिताः पश्चात्स्थापितास्ते वङ्गाः। कलमा इव शालिविशेषा इव। 'शालयः कलमाद्याश्च षष्टिकाद्याश्च पुंस्यमी'इत्यमरः। तेऽप्यापादपद्मं पादपद्ममूलपर्यन्तं प्रणताः। 'पादो बुध्ने तुरीयांशशैलप्रत्यन्तपर्वताः'इति विश्वः। उत्खातप्रतिरोपिताश्च। रघुं फलैर्धनैः। अन्यत्र,-सस्यैः। संवर्धयामासुः। 'फलं फले धने बीजे निष्पत्तौ भोगलाभयोः। सस्ये' इति केशवः॥ 37 ॥
+आपादेति॥ आपादपद्ममङ्घ्रिपद्मपर्यन्तं प्रणताः। अत एव,उत्खाताः पूर्वमुद्धृता अपि प्रतिरोपिताः पश्चात्स्थापितास्ते वङ्गाः। कलमा इव शालिविशेषा इव। 'शालयः कलमाद्याश्च षष्टिकाद्याश्च पुंस्यमी'इत्यमरः। तेऽप्यापादपद्मं पादपद्ममूलपर्यन्तं प्रणताः। 'पादो बुध्ने तुरीयांशशैलप्रत्यन्तपर्वताः'इति विश्वः। उत्खातप्रतिरोपिताश्च। रघुं फलैर्धनैः। अन्यत्र,-सस्यैः। संवर्धयामासुः। 'फलं फले धने बीजे निष्पत्तौ भोगलाभयोः। सस्ये' इति केशवः॥ 37 ॥
